<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Who is that Pokemon</string>
    <string name="action_settings">Settings</string>
    <string name="play">Play</string>
    <string name="score">Score</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="logo">Logo Hollywood Celebrities</string>
    <string name="lvl1">Level 1</string>
    <string name="lvl2">Level 2</string>
    <string name="lvl3">Level 3</string>
    <string name="lvl4">Level 4</string>
    <string name="lvl5">Level 5</string>
    <string name="lvl6">Level 6</string>
    <string name="lvl7">Level 7</string>
    <string name="lvl8">Level 8</string>
    <string name="lvl9">Level 9</string>
    <string name="lvl10">Level 10</string>
    <string name="menu">Menu</string>
    <string name="back">Back</string>

</resources>
