<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dip"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo"
                android:src="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="5dip" >

            <Button
                android:id="@+id/btnLvl1"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:text="@string/lvl1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="5dip" >

            <Button
                android:id="@+id/btnLvl2"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:text="@string/lvl2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="5dip" >

            <Button
                android:id="@+id/btnLvl3"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:text="@string/lvl3" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="5dip" >

            <Button
                android:id="@+id/btnLvl4"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:text="@string/lvl4" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="5dip" >

            <Button
                android:id="@+id/btnLvl5"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:text="@string/lvl5" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="5dip" >

            <Button
                android:id="@+id/btnLvl6"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:text="@string/lvl6" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="5dip" >

            <Button
                android:id="@+id/btnLvl7"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:text="@string/lvl7" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="5dip" >

            <Button
                android:id="@+id/btnLvl8"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:text="@string/lvl8" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="5dip" >

            <Button
                android:id="@+id/btnLvl9"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:text="@string/lvl9" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="5dip" >

            <Button
                android:id="@+id/btnLvl10"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:text="@string/lvl10" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="15dip"
            android:paddingBottom="15dip" >

            <Button
                android:id="@+id/btnMenu"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:text="@string/menu" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>