<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context=".SplashActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:contentDescription="@string/logo"
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="5dip"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:text="@string/play" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="5dip"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnScore"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:text="@string/score" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="5dip"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnSettings"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:text="@string/settings" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="5dip"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnExit"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:text="@string/exit" />
    </LinearLayout>
</LinearLayout>